--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "APR Pro",
-  "short_name": "APR",
+  "name": "KURS",
+  "short_name": "KURS",
   "start_url": "index.html",
   "display": "standalone",
   "background_color": "#0f172a",
