--- a/manifest.json
+++ b/manifest.json
@@ -1,22 +1,21 @@
 {
-  "name": "KURS",
   "short_name": "KURS",
-  "start_url": "index.html",
-  "display": "standalone",
-  "background_color": "#0f172a",
-  "theme_color": "#0f172a",
+  "name": "KURS",
   "icons": [
     {
-      "src": "https://fonts.gstatic.com/s/i/short-term/release/googlestdicons/currency_exchange/v1/512.png",
-      "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "any"
+      "src": "https://cdn-icons-png.flaticon.com/128/12658/12658309.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "https://fonts.gstatic.com/s/i/short-term/release/googlestdicons/currency_exchange/v1/512.png",
+      "src": "https://cdn-icons-png.flaticon.com/128/12658/12658309.png",
       "sizes": "512x512",
-      "type": "image/png",
-      "purpose": "maskable"
+      "type": "image/png"
     }
-  ]
+  ],
+  "start_url": "./index.html",
+  "background_color": "#0f172a",
+  "display": "standalone",
+  "scope": "./",
+  "theme_color": "#0f172a"
 }
