--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "KURS",
-  "name": "KURS",
+  "name": "KURS Alat Konversi",
   "icons": [
     {
       "src": "https://cdn-icons-png.flaticon.com/128/12658/12658309.png",
